  [Michele Simionato]
  * Changed the GMF calculator to use a single seed per unique rupture
  * Change the SESCollection exporter: now a single file is exported, before
    we were exporting one file per source model path per tectonic region model
  * Changed the event based calculators to avoid duplicating ruptures
    occurring more than once
  * Changed the risk calculators to work in blocks of assets on the same site
  * Made it possible to set different integration distances for different
    tectonic region types
  * Optimized the aggregation by asset in the event based risk calculator
  * Reporting the source_id when the filtering fails

python-oq-risklib (0.12.1-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Improved the validation of NRML files

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Thu, 17 Mar 2016 14:29:04 +0100

python-oq-risklib (0.12.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Reduced the data transfer for the average losses by a factor of 2
    insured_losses is false in the event based risk calculator
  * Fixed the uniform hazard spectra CSV export and used a more consistent
    format
  * Fixed a 32 bit/64 bit casting error for risk computations with a site model
    starting from a non-empty datastore
  * Discriminate the case of a missing datastore from the case of having no
    permission to access it
  * Saved half the space in absence of insured_losses in the event based risk
    calculator
  * Rewritten the CSV exporters for dmg_by_asset, dmg_by_taxo and dmg_total
  * Added CSV exporters for the ground motion fields
  * Stored `time_events` and `CostCalculator` in the datastore as arrays
  * Made possible to generate the report even for descriptions with
    non-ASCII characters
  * Added a tag `riskInvestigationTime` to the exported loss maps and curves
  * Made customizable the header of CSV files
