@@ -29,8 +29,7 @@ class ClassicalTestCase(CalculatorTestCase):
 
     def assert_curves_ok(self, expected, test_dir, delta=None):
         out = self.run_calc(test_dir, 'job.ini', exports='csv')
-        got = (out['hcurves', 'csv'] +
-               out.get(('hmaps', 'csv'), []))
+        got = (out['hcurves', 'csv'] + out['hmaps', 'csv'] + out['uhs', 'csv'])
         self.assertEqual(len(expected), len(got))
         for fname, actual in zip(expected, got):
             self.assertEqualFiles('expected/%s' % fname, actual,
@@ -189,8 +188,10 @@ hazard_map-smltp_SM2_a3pt2b0pt8-gsimltp_CB2008_@.csv'''.split(),
     @attr('qa', 'hazard', 'classical')
     def test_case_18(self):  # GMPEtable
         self.assert_curves_ok(
-            ['hazard_curve-mean.csv', 'hazard_map-mean.csv'],
+            ['hazard_curve-mean.csv', 'hazard_map-mean.csv',
+             'hazard_uhs-mean.csv'],
             case_18.__file__, delta=1E-7)
+        # this also tests that UHS curves are really exported
 
     @attr('qa', 'hazard', 'classical')
     def test_case_19(self):
