@@ -1,0 +1,4 @@
+lon,lat,poe~0.002105-PGA,poe~0.002105-SA(0.2),poe~0.002105-SA(1.0)
+-1.232374E+02,4.927479E+01,4.189332E-02,9.559597E-02,3.100745E-02
+-1.232328E+02,4.926162E+01,4.167645E-02,9.511285E-02,3.087749E-02
+-1.232048E+02,4.926786E+01,4.209680E-02,9.600781E-02,3.097641E-02
